# OpenAlice

./: .dockerignore  .env.example  .gitignore  .mcp.json  AGENTS.md  CLAUDE.md  CONTEXT.md  Cargo.toml  Dockerfile  LOCAL_README.md  ONE_SHOT_COMPLETE_PROMPT.md  PLANS.md  README.md  TODO.md  docker-compose.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  turbo.json  vitest.config.ts
.claude/: settings.json
.learnings/: LEARNINGS.md
_rust-port/: 01-survey.md  02-design.md  03-parity.md
contributions/: bounty-1777296518.md
crates/analysis-core/: Cargo.toml
crates/analysis-core/src/: evaluator.rs  lib.rs  parser.rs  reductions.rs  rolling.rs
default/: persona.default.md
docs/: 2026-06-01-ibkr-jp-and-market-data-fixes.md  PRD.md  README.md  ai-os-design.md  architecture.md  baseline-quality-gate.md  conversation-provenance.md  implementation-plan.md  knowledge-system.md  local-development.md  managed-workspace-runtime.md  model-semantics-and-runtime-injection.md  mt5-data-and-training-protocol.md  multi-agent.md  project-structure.md  roadmap.md  snaptrade-readonly-uta.md  theme-color-migration-16.json  theme-color-migration-18-runtime-worklist.json  theme-color-migration-18-static-manifest.json  theme-color-migration-18.json  workspace-issues-and-scheduling.md
parity/: README.md  canonical-decimal-temp.ts  check-canonical-decimal-temp.ts  decimal-inventory.md  load-legacy.ts  run-ts.ts  tsconfig.json
plans/: issue-model-effort-overrides.md
reports/: backtest-demo.md  council-demo.md  optimization-report.md
scripts/: assert-desktop-package.mjs  (+40 more)
(+1308 files in other folders)
